# nbvplanner

interface_nbvp_rotors/: CMakeLists.txt  package.xml
interface_nbvp_rotors/launch/: exploration_simulation.launch  mav_inspector.launch
interface_nbvp_rotors/worlds/: flat.world
kdtree/: CMakeLists.txt  package.xml
multiagent_collision_check/: CMakeLists.txt  package.xml
nbvplanner/: CMakeLists.txt  package.xml
prune_pointcloud/: CMakeLists.txt  package.xml
