<?xml version="1.0"?>
<package format="2">
  <name>interface_nbvp_rotors</name>
  <version>0.0.0</version>
  <description>The package that interfaces the nbvplanner with rotors</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>ASL 2.0</license>

  <author>Andreas Bircher</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>mav_msgs</depend>
  <depend>nbvplanner</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
</package>
