<?xml version="1.0"?>
<package format="2">
  <name>prune_pointcloud</name>
  <version>0.0.0</version>
  <description>The prune_pointcloud package</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>ASL 2.0</license>

  <author>Andreas Bircher</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin simple</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_catkin</depend>
</package>
